--- a/frontend/src/app/components/home-page/home-page.component.scss
+++ b/frontend/src/app/components/home-page/home-page.component.scss
@@ -150,7 +150,7 @@ hr {
 .listings-container ul {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 1rem;
+    gap: 1.785rem;
     list-style: none;
     padding: 0;
 }
@@ -161,15 +161,18 @@ hr {
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    width: fit-content;
 }
 
 .listings-container img {
-    width: 100%;
-    height: auto;
+    width: 250px;
+    height: 200px;
+    object-fit: cover;
 }
 
 .content {
     padding: 1rem;
+    flex-grow: 1;
 }
 
 .naziv {
