--- a/frontend/src/app/components/oglas-update/oglas-update.component.html
+++ b/frontend/src/app/components/oglas-update/oglas-update.component.html
@@ -61,9 +61,15 @@
             <button type="button" (click)="removeImage(i)"></button>
           </div>
         </div>
-        <input type="file" accept="image/*" multiple (change)="onImageChange($event)" />
+  
+        <label class="upload-label">
+          <input type="file" accept="image/*" multiple (change)="onImageChange($event)" />
+          <span>Choose Images</span>
+        </label>
+  
         <p *ngIf="images.length === 5">Maximum of 5 images uploaded</p>
       </div>
+      
   
       <button mat-raised-button color="primary" type="submit" [disabled]="listingForm.invalid">Update Listing</button>
     </form>
