--- a/frontend/src/app/components/user-profile/user-profile.component.html
+++ b/frontend/src/app/components/user-profile/user-profile.component.html
@@ -8,7 +8,7 @@
             <a class="nav-link" [class.active]="activeTab === 'profile'" (click)="activeTab = 'profile'">{{"profile" | translate}}</a>
         </li>
     </ul>
-
+ 
     <div *ngIf="activeTab === 'ads'">
       <div class="addListingButton">
         <a routerLink="/add-listing" class="addButton">
@@ -18,7 +18,7 @@
         <ul>
             <li *ngFor="let oglas of user.listings">
                 <a (click)="updateListing(oglas)">
-                    <img src="http://127.0.0.1:8000/{{oglas.images[0]}}" alt="Oglas slika" />
+                    <img src="{{this.apiUrl}}{{oglas.images[0]}}" alt="Oglas slika" />
                     <div class="content">
                         <div class="naziv">
                             {{ oglas.title }}
