--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="links">
         <ul>
-          <li><a routerLink="/o-nama">{{ "about" | translate }}</a></li>
+          <li><a routerLink="about">{{ "about" | translate }}</a></li>
           <li><a routerLink="/kontakt">{{ "contact" | translate }}</a></li>
           <li><a routerLink="/pomoc">{{ "help" | translate }}</a></li>
         </ul>
