--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -2,9 +2,9 @@
     <div class="container">
       <div class="links">
         <ul>
-          <li><a routerLink="/o-nama">{{ "about" | translate }}</a></li>
-          <li><a routerLink="/kontakt">{{ "contact" | translate }}</a></li>
-          <li><a routerLink="/pomoc">{{ "help" | translate }}</a></li>
+          <li><a routerLink="o-nama">{{ "about" | translate }}</a></li>
+          <li><a routerLink="">{{ "contact" | translate }}</a></li>
+          <li><a routerLink="">{{ "help" | translate }}</a></li>
         </ul>
       </div>
       <div class="copyright">
