--- a/frontend/src/app/components/footer/footer.component.scss
+++ b/frontend/src/app/components/footer/footer.component.scss
@@ -1,10 +1,10 @@
 /* Footer Section */
 footer {
-  background: linear-gradient(145deg, #d0e6f7, #eaf3fc); /* Blue gradient */
+  background: linear-gradient(145deg, #f1f7fc, #ffffff); /* Lighter, whiteish gradient */
   color: #2a4b68; /* Neutral blueish text color */
   padding: 3rem 0;
   margin-top: auto;
-  border-top: 2px solid #5d9bd3; /* Blue border */
+  // border-top: 2px solid #5d9bd3; /* Blue border */
   font-family: 'Arial', sans-serif;
   box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
 }
