--- a/frontend/src/app/components/add-listing/add-listing.component.html
+++ b/frontend/src/app/components/add-listing/add-listing.component.html
@@ -4,7 +4,7 @@
     <mat-form-field class="form-field" appearance="outline">
       <mat-label>{{"title" | translate}}</mat-label>
       <input matInput id="title" type="text" formControlName="title" />
-      <mat-error *ngIf="listingForm.get('title')?.hasError('required')">{{"requireTitle" | translate}}</mat-error>
+      <mat-error *ngIf="listingForm.get('title')?.hasError('required')">{{"titleRequired" | translate}}</mat-error>
     </mat-form-field>
 
     <mat-form-field class="form-field" appearance="outline">
@@ -42,6 +42,8 @@
         <mat-option value="">{{"selectSubcategory" | translate}}</mat-option>
         <mat-option *ngFor="let sub of subcategories" [value]="sub">{{ sub }}</mat-option>
       </mat-select>
+      <mat-error *ngIf="listingForm.get('subcategory')?.hasError('required')">{{"valueRequired" |
+        translate}}</mat-error>
     </mat-form-field>
 
     <div formArrayName="attributes" class="attributes">
@@ -54,33 +56,21 @@
       </div>
     </div>
 
-    <!-- <div class="images-section">
-        <h2>Upload Images</h2>
-        <div class="image-preview-container">
-          <div class="image-preview" *ngFor="let preview of imagePreviews; let i = index">
-            <img [src]="preview" alt="Image preview" />
-            <button type="button" (click)="removeImage(i)"></button>
-          </div>
-        </div>
-        <input type="file" accept="image/*" multiple (change)="onImageChange($event)" />
-        <p *ngIf="images.length === 5">Maximum of 5 images uploaded</p>
-      </div> -->
-
     <div class="images-section">
-      <h2>Upload Images</h2>
+      <h2>{{"uploadImages" | translate}}</h2>
       <div class="image-preview-container">
         <div class="image-preview" *ngFor="let preview of imagePreviews; let i = index">
           <img [src]="preview" alt="Image preview" />
-          <button type="button" (click)="removeImage(i)"></button>
+          <button type="button" (click)="removeImage(i)">&times;</button>
         </div>
       </div>
 
       <label class="upload-label">
         <input type="file" accept="image/*" multiple (change)="onImageChange($event)" />
-        <span>Choose Images</span>
+        <span>{{"chooseImages" | translate}}</span>
       </label>
 
-      <p *ngIf="images.length === 5">Maximum of 5 images uploaded</p>
+      <p *ngIf="images.length === 5">{{"maxImages" | translate}}</p>
     </div>
 
 
