--- a/frontend/src/app/components/oglas-detalji/oglas-detalji.component.html
+++ b/frontend/src/app/components/oglas-detalji/oglas-detalji.component.html
@@ -7,21 +7,17 @@
 
 <div class="oglas-detalji">
   <div class="slideshow-container" *ngIf="oglas.images && oglas.images.length > 0">
-    <div
-      class="slide"
-      *ngFor="let img of oglas.images; let i = index"
-      [class.active]="i === currentSlide"
-    >
+    <div class="slide" *ngFor="let img of oglas.images; let i = index" [class.active]="i === currentSlide">
       <img src="{{apiUrl}}{{img}}" [alt]="'Image ' + i" />
     </div>
-   
+
     <!-- Navigation buttons -->
     <a *ngIf="oglas.images.length > 1" class="prev" (click)="previousSlide()">&#10094;</a>
     <a *ngIf="oglas.images.length > 1" class="next" (click)="nextSlide()">&#10095;</a>
-  
+
   </div>
-  
-  
+
+
   <h2 class="oglas-title">{{ "description" | translate }}</h2>
   <p class="oglas-description">{{ oglas.description }}</p>
 
@@ -46,7 +42,7 @@
       <span class="attribute-value">{{ attribute.value }}</span>
     </div>
   </div>
-  
+
 
   <!-- User info card -->
   <strong>{{"publisher" | translate}}: </strong>
@@ -55,10 +51,17 @@
     <div class="user-info">
       <p class="user-name">{{ user.username }}</p>
       <div class="user-actions">
-        <app-button class="user-action-button">{{"call" | translate}}</app-button>
-        <app-button class="user-action-button" routerLink="/messages">{{"sendMessage" | translate}}</app-button>
-
+        <button  (click)="openModal()" class="user-action-button contactButton">{{"call" | translate}}</button>
       </div>
+    </div>
+  </div>
+  <!-- Modal (Hidden by default) -->
+  <div class="modal" *ngIf="isModalVisible" (click)="onModalClick($event)">
+    <div class="modal-content" (click)="onModalContentClick($event)">
+      <span class="close" (click)="closeModal()">&times;</span>
+      <h2>{{ "contact-info" | translate }}</h2>
+      <p><strong>{{ "phone" | translate }}:</strong> {{ user.tel_num }}</p>
+      <p><strong>{{ "email" | translate }}: </strong> <a href="mailto:{{ user.email }}">{{ user.email }}</a></p>
     </div>
   </div>
 </div>
