--- a/frontend/src/app/components/oglas-detalji/oglas-detalji.component.scss
+++ b/frontend/src/app/components/oglas-detalji/oglas-detalji.component.scss
@@ -1,3 +1,50 @@
+
+/* Modal styles */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 300px;
+  text-align: center;
+}
+
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.contactButton{
+  border: none; 
+  border-radius: 25px;
+  color: #007bff;
+  background: white;
+  padding: 8px 17px;
+  font-size: medium;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
+}
+
+.contactButton:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+  cursor: pointer;
+}
+
 /* Base styling */
 body {
   font-family: Arial, sans-serif;
