--- a/frontend/src/app/components/oglas-update/oglas-update.component.html
+++ b/frontend/src/app/components/oglas-update/oglas-update.component.html
@@ -58,7 +58,7 @@
         <div class="image-preview-container">
           <div class="image-preview" *ngFor="let preview of imagePreviews; let i = index">
             <img [src]="preview" alt="Image preview" />
-            <button type="button" (click)="removeImage(i)"></button>
+            <button type="button" (click)="removeImage(i)">&times;</button>
           </div>
         </div>
   
