--- a/frontend/src/app/components/home-page/home-page.component.scss
+++ b/frontend/src/app/components/home-page/home-page.component.scss
@@ -8,9 +8,7 @@ ul {
 }
 
 ul li a {
-    height: wrap-content;
-    width: fit-content;
-    // padding-bottom: 2rem;
+    width: min-content;
     border: 2.5px solid whitesmoke;
     border-radius: 1rem;
     margin: 0.5rem;
