popravak cijene na detaljima oglasa

--- a/frontend/src/app/components/oglas-detalji/oglas-detalji.component.html
+++ b/frontend/src/app/components/oglas-detalji/oglas-detalji.component.html
@@ -22,7 +22,7 @@
   <p class="oglas-description">{{ oglas.description }}</p>
 
   <p class="oglas-price">
-    <strong>{{"price" | translate}}:</strong> {{ oglas.cijena }}
+    <strong>{{"price" | translate}}:</strong> {{ oglas.price }} €
   </p>
 
   <p class="oglas-categories">
