--- a/frontend/src/app/components/add-listing/add-listing.component.html
+++ b/frontend/src/app/components/add-listing/add-listing.component.html
@@ -31,7 +31,7 @@
       <mat-label>{{"category" | translate}}</mat-label>
       <mat-select id="category" formControlName="category" (selectionChange)="onCategoryChange($event)">
         <mat-option value="">{{"selectCategory" | translate}}</mat-option>
-        <mat-option *ngFor="let cat of categories" [value]="cat.name">{{ cat.name }}</mat-option>
+        <mat-option *ngFor="let cat of categories" [value]="cat.name">{{ cat.name | translate}}</mat-option>
       </mat-select>
       <mat-error *ngIf="listingForm.get('category')?.hasError('required')">{{"categoryError" | translate}}</mat-error>
     </mat-form-field>
@@ -40,7 +40,7 @@
       <mat-label>{{"subcategory" | translate}}</mat-label>
       <mat-select id="subcategory" formControlName="subcategory" (selectionChange)="onSubCategoryChange($event)">
         <mat-option value="">{{"selectSubcategory" | translate}}</mat-option>
-        <mat-option *ngFor="let sub of subcategories" [value]="sub">{{ sub }}</mat-option>
+        <mat-option *ngFor="let sub of subcategories" [value]="sub">{{ sub | translate}}</mat-option>
       </mat-select>
       <mat-error *ngIf="listingForm.get('subcategory')?.hasError('required')">{{"valueRequired" |
         translate}}</mat-error>
