--- a/frontend/src/app/components/user-profile/user-profile.component.html
+++ b/frontend/src/app/components/user-profile/user-profile.component.html
@@ -25,8 +25,8 @@
                         </div>
                         <hr />
                         <div class="kategorije">
-                          <span><app-button [text]="oglas.category.category_name"></app-button></span>
-                          <span><app-button [text]="oglas.subcategory.subcategory_name"></app-button></span>
+                          <span><app-button [text]="oglas.category.category_name | translate"></app-button></span>
+                          <span><app-button [text]="oglas.subcategory.subcategory_name | translate"></app-button></span>
                         </div>
                         <div class="cijena">
                             {{ oglas.price }} EUR
